# Lithium-supply-chain-mapping

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_preprocessing.py
figures/: P4_extraction.ipynb  color_map_temp.json  flow_validation.ipynb  focal_node_loop.ipynb  global_foci.ipynb  sankey_flows.ipynb  tree_sankey.ipynb
figures/article_figures/: Geopolitical_risk.eps  result_baci_validation.eps
preprocessing/: benchmark_formatting.py  benchmark_to_graphElements.py  config.py  create_partnership_matches.py  edges.py
preprocessing/matching_jsons/: partnership_matching.json
utils/: __init__.py  companies.py  countries.py  gcloud_utilities.py  gpt_match_responses.py  metadata.py  preprocessing_utilities.py
