[project]
name = "critical-minerals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "gcloud>=0.18.3",
    "google>=3.0.0",
    "google-cloud-storage>=2.18.2",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "networkx>=3.2.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.4",
    "setuptools>=75.5.0",
    "loguru>=0.7.2",
    "datetime>=5.5",
    "openpyxl>=3.1.5",
    "country-converter>=1.3",
    "openai>=1.59.5",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.0",
]
[tool.setuptools]
packages = ["utils",  "processing"]

